--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VITE_API_BASE_URL=http://localhost:3000
-VITE_API_MODE=0
+VITE_API_MODE=1
 VITE_LOCAL_API_URL=http://localhost:8080
-VITE_REMOTE_API_URL=http://your-production-api.com
+VITE_REMOTE_API_URL=http://travelsever1.maxtral.fun
