--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "http://travelsever1.maxtral.fun/api/:path*"
+      "destination": "https://travelsever1.maxtral.fun/api/:path*"
     }
   ],
   "headers": [
